--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "test": "NODE_ENV=test jest --verbose --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "Jacob Gifford",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "express-session": "^1.17.3",
+    "nodemon": "^3.0.2",
+    "socket.io": "^4.7.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js",
+    "testTimeout": 10000
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
