--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemon": "^3.0.2",
+    "short-unique-id": "^5.0.3",
     "socket.io": "^4.7.2"
   },
   "jest": {
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/uniqid": "^5.3.4",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
